# difference_frame_detection

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  debug.py
cmake/: BuildCURL.cmake  BuildFFmpeg.cmake  BuildJson.cmake  BuildOpenCV.cmake  DownloadNDK.cmake  FetchDeps.cmake
config/: config.yaml
data/images/: calib.txt
docs/: rknn_integration.md
docs/prompts/: prompt0.md  prompt1.md  prompt2.md  prompt3.md
docs/specs/: 01_difference_pipeline.md  02_camera_detection_capability.md  03_person_detection.md  04_object_tracking.md  05_frame_difference_analysis.md  06_event_analysis.md  data_models.md  state.md
docs/superpowers/plans/: 2026-04-27-automated-dependency-management.md  2026-04-28-detection-debug.md
docs/superpowers/specs/: 2026-04-27-automated-dependency-management-design.md  2026-04-28-detection-debug-design.md
scripts/: rk3566_run.sh  rtsp_stream_server.py  vision_api_server.py
scripts/onnx_to_rknn/: .gitignore  Dockerfile.toolkit  Dockerfile.toolkit2  app.py  convert_worker.py  docker-compose.yml  requirements.txt  test_app.py
scripts/onnx_to_rknn/modules/: __init__.py  config.py  models.py  utils.py  venv_manager.py
scripts/onnx_to_rknn/templates/: config.html  converting.html  history.html  index.html  result.html
src/: main.cpp
src/analysis/: event_analyzer.cpp  event_analyzer.h  frame_diff.cpp  frame_diff.h  similarity.cpp  similarity.h
src/camera/: capability_checker.cpp  capability_checker.h  detection_reader.cpp  detection_reader.h
src/common/: config.cpp  config.h  image_loader.cpp  image_loader.h  logger.cpp  logger.h  performance_stats.cpp  performance_stats.h  types.h  visualization.cpp  visualization.h
src/core/: pipeline.cpp  pipeline.h  state.h  state_machine.cpp  state_machine.h
src/decoder/: frame_decoder.cpp  frame_decoder.h
src/detection/: detector.cpp  detector.h  rknn_adapter.cpp  rknn_adapter.h  rknn_detector.cpp  rknn_detector.h  yolo_postprocess.cpp  yolo_postprocess.h
src/rtsp/: rtsp_client.cpp  rtsp_client.h  rtsp_validator.cpp  rtsp_validator.h
src/tracking/: byte_tracker.cpp  byte_tracker.h  tracker.h
src/utils/: frame_queue.cpp  frame_queue.h
tests/: CMakeLists.txt  rknn_api_stub.cpp  test_config.cpp  test_detector.cpp  test_event_analyzer.cpp  test_frame_diff.cpp  test_frame_queue.cpp  test_image_loader.cpp  test_logger.cpp  test_performance_stats.cpp  test_rknn_adapter.cpp  test_rtsp_stream_server.py  test_rtsp_validator.cpp  test_similarity.cpp  test_state_machine.cpp  test_tracker.cpp  test_types.cpp  test_visualization.cpp  test_yolo_postprocess.cpp
